crates/test-ui/ui/fn_ptr_reference_method.stderr
error[E0277]: the trait bound `for<'a> extern "C" fn(_, _, &'a NSObject): MethodImplementation` is not satisfied
 --> ui/fn_ptr_reference_method.rs
  |
  |         builder.add_method(sel!(third:), my_fn as extern "C" fn(_, _, &NSObject));
  |                 ----------               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `for<'a> extern "C" fn(_, _, &'a NSObject)`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            unsafe extern "C" fn(Allocated<T>, objc2::runtime::Sel) -> IdReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel) -> IdReturnValue
            unsafe extern "C" fn(Allocated<T>, objc2::runtime::Sel, A) -> IdReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A) -> IdReturnValue
            unsafe extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B) -> IdReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B) -> IdReturnValue
            unsafe extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C) -> IdReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C) -> IdReturnValue
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare/mod.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
